// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render green text 1`] = `
.glamor-1 {
  display: inline-block;
  vertical-align: bottom;
  display: inline-block;
  vertical-align: bottom;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  vertical-align: middle;
  text-align: initial;
  text-decoration: inherit;
  font-weight: 300;
  font-size: 16px;
  color: rgb(62,179,138);
}

.glamor-1:hover {
  text-decoration: inherit;
}

.glamor-1 strong {
  font-weight: 500;
}

<span
  align="initial"
  className="glamor-0 glamor-1"
  color="green"
  hoverColor="none"
  href={undefined}
  interactive={undefined}
  multiline={undefined}
  name={undefined}
  notInteractive={undefined}
  onClick={undefined}
  size="medium"
  style={Object {}}
  target={undefined}
  weight="light"
>
  Hello World
</span>
`;

exports[`Text should render large text 1`] = `
.glamor-1 {
  display: inline-block;
  vertical-align: bottom;
  display: inline-block;
  vertical-align: bottom;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  vertical-align: middle;
  text-align: initial;
  text-decoration: inherit;
  font-weight: 300;
  font-size: 18px;
  color: rgb(55,69,97);
}

.glamor-1:hover {
  text-decoration: inherit;
}

.glamor-1 strong {
  font-weight: 500;
}

<span
  align="initial"
  className="glamor-0 glamor-1"
  color="charcoal"
  hoverColor="none"
  href={undefined}
  interactive={undefined}
  multiline={undefined}
  name={undefined}
  notInteractive={undefined}
  onClick={undefined}
  size="large"
  style={Object {}}
  target={undefined}
  weight="light"
>
  Hello World
</span>
`;

exports[`Text should render shallow component ok 1`] = `
.glamor-1 {
  display: inline-block;
  vertical-align: bottom;
  display: inline-block;
  vertical-align: bottom;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  vertical-align: middle;
  text-align: initial;
  text-decoration: inherit;
  font-weight: 300;
  font-size: 16px;
  color: rgb(55,69,97);
}

.glamor-1:hover {
  text-decoration: inherit;
}

.glamor-1 strong {
  font-weight: 500;
}

<span
  align="initial"
  className="glamor-0 glamor-1"
  color="charcoal"
  hoverColor="none"
  href={undefined}
  interactive={undefined}
  multiline={undefined}
  name={undefined}
  notInteractive={undefined}
  onClick={undefined}
  size="medium"
  style={Object {}}
  target={undefined}
  weight="light"
>
  Hello World
</span>
`;
